--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -26,8 +26,9 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest
+        # --prefer-binary prevents compiling from source (which hangs)
+        # --no-cache-dir saves space and prevents corruption
+        pip install -r requirements.txt --prefer-binary --no-cache-dir
 
     # 4. Run Tests (Injecting Secrets)
     - name: Run Tests
