--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -22,13 +22,17 @@ jobs:
       with:
         python-version: "3.11"
 
-    # 3. Install Dependencies
+# 3. Install Dependencies 
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        # --prefer-binary prevents compiling from source (which hangs)
-        # --no-cache-dir saves space and prevents corruption
-        pip install -r requirements.txt --prefer-binary --no-cache-dir
+        
+        # Step A: Install Snowflake (The strict one)
+        pip install snowflake-snowpark-python pandas --prefer-binary
+        
+        # Step B: Install LangChain & Tools (Layered on top)
+        # We assume the risk of version mismatch to get it working
+        pip install langchain langchain-community langgraph streamlit python-dotenv tabulate pytest pytest-timeout --prefer-binary
 
     # 4. Run Tests (Injecting Secrets)
     - name: Run Tests
